[tool.poetry]
name = "plateaukit"
version = "0.9.1"
description = "Python library and converter for 3D city models by MLIT Project PLATEAU"
authors = ["Kentaro Ozeki <32771324+ozekik@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://ozekik.github.io/plateaukit/"
repository = "https://github.com/ozekik/plateaukit"
license = "MIT"
packages = [{ include = "plateaukit" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tqdm = "^4.64.1"
geojson = "^3.1.0"
loguru = "^0.6.0"
pyproj = "^3.4.1"
lxml = "^4.9.2"
tortoise-orm = "^0.19.2"
# aiomultiprocess = "^0.9.0"
geopandas = "^0.14.0"
prettytable = "^3.6.0"
requests = "^2.28.2"
pydantic = ">=1,<3"
bidict = "^0.22.1"
pyogrio = "^0.7.2"
quantized-mesh-encoder = "^0.4.3"
numpy = "^1.26.0"
platformdirs = "^3.10.0"
# pydeck = {extras = ["jupyter"], version = "^0.8.0"}
rich = { extras = ["jupyter"], version = "^13.7.0" }
pydeck = "^0.8.0"
normalize-japanese-addresses = "^0.0.6"
kanjize = "1.3.0"
fs = "^2.4.16"

[tool.poetry.scripts]
plateaukit = "plateaukit.cli:cli"

[tool.poetry.group.dev.dependencies]
pyglet = "^2.0.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
ipykernel = "^6.25.2"
ipywidgets = "<8"
folium = "^0.15.0"
mapclassify = "^2.6.1"
cmap = "^0.1.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocstrings-python = "^1.2.1"
mkdocs-exclude = "^1.0.2"
markdown-exec = { extras = ["ansi"], version = "^1.6.0" }
mkdocs-redirects = "^1.2.1"
mkdocs-jupyter = "^0.24.6"
notebook = "<7"  # Due to jupyter-nbextensions-configurator
jupyter-contrib-nbextensions = "^0.7.0"
mkdocs-click = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
